cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: JAWS DAYS 2021 Security Group Hands On

Parameters:
  VpcCidrBlock:
    Type: String
    Default: 172.18.0.0/16
  Ec2ImageId:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  Ec2InstanceType:
    Type: String
    Default: t2.micro
  Ec2KeyName:
    Type: String
    Default: jaws-sg-key

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-vpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 0
        - !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]
      MapPublicIpOnLaunch: true # Optional
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-subnet-1
      VpcId: !Ref VPC

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 1
        - !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]
      MapPublicIpOnLaunch: true # Optional
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-subnet-2
      VpcId: !Ref VPC

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 3
        - !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]
      MapPublicIpOnLaunch: false # Optional
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-subnet-1
      VpcId: !Ref VPC

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 4
        - !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]
      MapPublicIpOnLaunch: false # Optional
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-subnet-2
      VpcId: !Ref VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-igw

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway # Optional
      VpcId: !Ref VPC

  PublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-route-table-1
      VpcId: !Ref VPC

  PublicRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable1

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      SubnetId: !Ref PublicSubnet1

  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-route-table-2
      VpcId: !Ref VPC

  PublicRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable1

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-route-table-1
      VpcId: !Ref VPC

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-route-table-2
      VpcId: !Ref VPC

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  PublicEc2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref Ec2ImageId
      InstanceType: !Ref Ec2InstanceType
      KeyName: !Ref Ec2KeyName
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-ec2-1
      UserData:
        Fn::Base64: |
          #!/bin/bash
          eval "$(ssh-agent)"

  PrivateEc2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref Ec2ImageId
      InstanceType: !Ref Ec2InstanceType
      KeyName: !Ref Ec2KeyName
      SubnetId: !Ref PrivateSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-ec2-1
      UserData:
        Fn::Base64: |
          #!/bin/bash
          eval "$(ssh-agent)"

          sudo amazon-linux-extras install nginx1 -y
          sudo echo "Hello JAWS!" | sudo tee /usr/share/nginx/html/jaws.html
          sudo systemctl start nginx

  PrivateEc2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref Ec2ImageId
      InstanceType: !Ref Ec2InstanceType
      KeyName: !Ref Ec2KeyName
      SubnetId: !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-ec2-2
      UserData:
        Fn::Base64: |
          #!/bin/bash
          eval "$(ssh-agent)"

          sudo amazon-linux-extras install nginx1 -y
          sudo echo "Hello JAWS!" | sudo tee /usr/share/nginx/html/jaws.html
          sudo systemctl start nginx
